# TweetDeckPlayer

./: .buildignore.js  .csscomb.json  .editorconfig  .eslintrc.js  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ChangeLog.md  Installation.md  LICENSE  LICENSE.md  README.ja.md  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cef.sln  cef_paths2.gypi  cmake_install.cmake  config.js  did-finish-load.js  emoji.json  index.js  package-lock.json  package.json  pre_check.js  preload.js  preload_popup.js  setting.html  setting.js  settings.html  start.js  tweetdeck.icns  util.js  version.js
Public/: README.txt  appdata.ini
Public/License/: LICENSE.TXT
Public/script/: font-size.js  gaeulbyul-paste-image.js  script.js
Public/style/: style.css
Release/: README.txt  appdata.ini  cef.pak  cef_resources.pak  libcef.lib
Release/License/: CHROMIUM_CREDITS.html  CHROMIUM_LICENSE.txt  CMakeLists.txt  LIBCEF_INFORMATION.txt
Release/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  fi.pak  fr.pak  hr.pak  id.pak  ja.pak  lt.pak  lv.pak  nb.pak  nl.pak  pt-BR.pak  ro.pak  ru.pak  sr.pak  sv.pak  ta.pak  vi.pak
Release/script/: script.js
Release/style/: style.css
Resources/locales/: de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fil.pak  gu.pak  he.pak  hi.pak  hu.pak  it.pak  kn.pak  ko.pak  ml.pak  mr.pak  ms.pak  pl.pak  pt-PT.pak  sk.pak  sl.pak  sw.pak  te.pak  th.pak  tr.pak  uk.pak  zh-CN.pak  zh-TW.pak
cefclient/: README.md  cefclient.vcxproj  cefclient.vcxproj.filters  cefclient_win.cc  cmake_install.cmake
cefclient/browser/: browser_window_osr_win.cc  client_app_browser.cc  client_handler.cc  client_handler.h  main_context_impl.cc  root_window_win.cc  root_window_win.h  test_runner.cc
cefclient/resources/win/: cefclient.aps  cefclient.rc  resource.h
cefsimple/: CMakeLists.txt  cefsimple.vcxproj  cefsimple.vcxproj.filters  cmake_install.cmake
css/: emojipad.css  extra.css  settings.css  settings.dark.css
include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
libcef_dll/: CMakeLists.txt  cmake_install.cmake  libcef_dll_wrapper.vcxproj  libcef_dll_wrapper.vcxproj.filters
preload_scripts/: autosave-favorites.js  clipboard-paste.js  emojiname.js  emojipad.js  playermonkey.js  twtlib.js  unlinkis.js  wordfilter.js
src/: MacAppMenu.js  config-schema.js  config.js  emoji.json  index.js  pre_check.js  preload.js  preload_popup.js  setting.html  setting.js  update-check.js  util.js  version.js
src/css/: emojipad.css  extra.css  pace.css  settings.css  settings.dark.css
src/preload_scripts/: autosave-favorites.js  clipboard-paste.js  counterclear.js  emojiname.js  emojipad.js  gif-autoplay.js  image-viewer.js  playermonkey.js  quote-without-notification.js  switch-account.js  twtlib.js  unlinkis.js  user-note.js  wikilinkfix.js  wordfilter.js
src/ui/: twtlib.html
tdpmain/: CMakeLists.txt  cmake_install.cmake  resource.h  tdpmain.aps  tdpmain.rc  tdpmain_app.cc  tdpmain_app.h  tdpmain_cef_win.cc  tdpmain_handler.cc  tdpmain_handler.h  tdpmain_handler_win.cc  tdpmain_settingsdlg.cc  tdpmain_settingsdlg.h  tdpmain_window.cc  tdpmain_window.h  util_win.cc  util_win.h
tools/: build.js  clean.js
ui/: twtlib.html
